[package]
name = "zerg"
version = "0.0.2"
edition = "2021"
authors = ["Rodrigo Navarro <rnavarro@rnavarro.com.br>"]
description = "HTTP throughput benchmarking library"
license = "MIT"

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "runtime"] }
rand = "0.8"
serde_json = "1"
tdigest = "0.2.3"
tokio = { version = "1", features = ["io-util", "net", "rt-multi-thread"] }
tower = { version = "0.4.8", features = ["util"] }
